# GL-Coin-Collect

./: .gitignore  CMakeLists.txt  CoinCollectGame.sln
CoinCollect/: AppleCollector.vcxproj.filters  CMakeLists.txt  CoinCollect.vcxproj
CoinCollect/src/: AppleCollector.cpp
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/lib/Win32/: glad.lib
Dependencies/glad/lib/x64/: glad.lib
Dependencies/glad/src/: glad.c
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/GLshaders/: sprite.frag  sprite.vert  text.frag
Engine/include/: Engine.h
Engine/include/Engine/: API.h  File.h  Time.h
Engine/include/Engine/Application/: Application.h  ApplicationConfig.h  Window.h
Engine/include/Engine/Components/: Animator.h  SoundSource.h  SpriteRenderer.h  TextRenderer.h  Transform.h
Engine/include/Engine/Entity/: Component.h  GameObject.h  Sprite.h  Text.h
Engine/include/Engine/Exception/: Exception.h
Engine/include/Engine/Graphics/: FontManager.h  ImageData.h  ShaderProgram.h  TextureManager.h  Viewport.h
Engine/include/Engine/Input/: EventSystem.h  Input.h  Keys.h
Engine/include/Engine/Math/: Matrix3.h  Vector2.h  Vector2Int.h  Vector4.h
Engine/include/Engine/Sound/: AudioClip.h  SoundBuffer.h  SoundDevice.h
Engine/src/: File.cpp  Time.cpp
Engine/src/Application/: Application.cpp  Window.cpp
Engine/src/Components/: Animator.cpp  SoundSource.cpp  SpriteRenderer.cpp  TextRenderer.cpp  Transform.cpp
Engine/src/Entity/: Component.cpp  GameObject.cpp  Sprite.cpp  Text.cpp
Engine/src/Exception/: Exception.cpp
Engine/src/Graphics/: FontManager.cpp  ImageData.cpp  ShaderProgram.cpp  TextureManager.cpp  Viewport.cpp
Engine/src/Input/: EventSystem.cpp  Input.cpp
Engine/src/Math/: Matrix3.cpp
Engine/src/Sound/: AudioClip.cpp  SoundBuffer.cpp  SoundDevice.cpp
Scripts/: CMakeLists.txt  Scripts.vcxproj  Scripts.vcxproj.filters
Scripts/include/: API.h  Coin.h  Collectable.h  Player.h  Scripts.h
Scripts/src/: Coin.cpp  Collectable.cpp  Player.cpp
